log
Fri 29 Sep 2023 07:34:22 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:31: error: expected ‘;’ before ‘if’
   61 |         if(condicion==1) break
      |                               ^
      |                               ;
   62 |         if(n->sudo[i][j]==0)
      |         ~~                     
sudoku.c:54:10: error: unused variable ‘nodoRemp’ [-Werror=unused-variable]
   54 |     Node nodoRemp;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ddcd66d
Fri 29 Sep 2023 07:34:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:22: error: expected ‘;’ before ‘for’
   64 |           condicion=1
      |                      ^
      |                      ;
   65 |           for(int k=1; k<=9; k++)
      |           ~~~         
sudoku.c:54:10: error: unused variable ‘nodoRemp’ [-Werror=unused-variable]
   54 |     Node nodoRemp;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5c0fd3e
Fri 29 Sep 2023 07:35:26 PM UTC: 
 sudoku.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:24: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   63 |             nodoRemp = copy(n)
      |                        ^~~~
sudoku.c:63:31: error: expected ‘;’ before ‘nodoRemp’
   63 |             nodoRemp = copy(n)
      |                               ^
      |                               ;
   64 |             nodoRemp->sudo[i][j] = k
      |             ~~~~~~~~           
sudoku.c:54:10: error: variable ‘nodoRemp’ set but not used [-Werror=unused-but-set-variable]
   54 |     Node nodoRemp;
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cbae300
Fri 29 Sep 2023 07:35:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:24: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   63 |             nodoRemp = copy(n);
      |                        ^~~~
sudoku.c:64:21: error: invalid type argument of ‘->’ (have ‘Node’)
   64 |             nodoRemp->sudo[i][j] = k
      |                     ^~
sudoku.c:64:37: error: expected ‘;’ before ‘if’
   64 |             nodoRemp->sudo[i][j] = k
      |                                     ^
      |                                     ;
   65 |             if(is_valid(nodoRemp)){
      |             ~~                       
Compilation failed
d311914
Fri 29 Sep 2023 07:36:11 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:24: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   63 |             nodoRemp = copy(n);
      |                        ^~~~
sudoku.c:64:21: error: invalid type argument of ‘->’ (have ‘Node’)
   64 |             nodoRemp->sudo[i][j] = k
      |                     ^~
sudoku.c:64:37: error: expected ‘;’ before ‘if’
   64 |             nodoRemp->sudo[i][j] = k
      |                                     ^
      |                                     ;
   65 |             if(is_valid(nodoRemp)){
      |             ~~                       
Compilation failed
af21afd
Fri 29 Sep 2023 07:36:28 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:63:24: error: incompatible types when assigning to type ‘Node’ from type ‘Node *’
   63 |             nodoRemp = copy(n);
      |                        ^~~~
sudoku.c:64:21: error: invalid type argument of ‘->’ (have ‘Node’)
   64 |             nodoRemp->sudo[i][j] = k;
      |                     ^~
sudoku.c:65:25: error: incompatible type for argument 1 of ‘is_valid’
   65 |             if(is_valid(nodoRemp)){
      |                         ^~~~~~~~
      |                         |
      |                         Node
sudoku.c:46:20: note: expected ‘Node *’ but argument is of type ‘Node’
   46 | int is_valid(Node* n){
      |              ~~~~~~^
sudoku.c:66:30: error: incompatible type for argument 2 of ‘pushBack’
   66 |               pushBack(list, nodoRemp);
      |                              ^~~~~~~~
      |                              |
      |                              Node
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘Node’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:68:20: error: incompatible type for argument 1 of ‘free’
   68 |               free(nodoRemp);
      |                    ^~~~~~~~
      |                    |
      |                    Node
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:565:25: note: expected ‘void *’ but argument is of type ‘Node’
  565 | extern void free (void *__ptr) __THROW;
      |                   ~~~~~~^~~~~
Compilation failed
5c7e52c
Fri 29 Sep 2023 07:37:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
cba6e16
